@@ -1,3 +1,7 @@
+2014-06-20  Akira Kakuto  <kakuto@fuk.kinidai.ac.jp>
+
+	* texmfmp.c: Support short-file-name convention (w32 only).
+
 2014-05-06  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	Update to e-pTeX and e-upTeX from Akira Kakuto.
